--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="bannBlock">
                 <nav>
                     <ul>
-                        <li><a href="#">Меню</a></li>
+                        <li><a href="menu.html">Меню</a></li>
                         <li><a href="#">Доставка</a></li>
                         <li><a href="#">Оплата</a></li>
                         <li><a class="btn btn-accent" data-bs-toggle="modal" data-bs-target="#newOrderModal">Бронь столика</a></li>
@@ -188,6 +188,32 @@
         </div>
     </footer>
 
+    <div class="menu-open">
+        <div class="info-block">
+            <div class="item logo-close">
+                <div class="logo">
+                    <img src="img/logo.svg" alt="">
+                </div>
+                <div class="btn-close"><i class="fa-solid fa-xmark"></i></div>
+            </div>
+            <div class="item list">
+                <ul>
+                    <li><a href="menu.html">Меню</a></li>
+                    <li><a href="#">Доставка</a></li>
+                    <li><a href="#">Оплата</a></li>
+                    <li><a href="#" class="btn btn-accent" data-bs-toggle="modal" data-bs-target="#newOrderModal">Бронь столика</a></li>
+                </ul>
+            </div>
+            <div class="item social">
+                <ul>
+                    <li><a href="#"><img src="img/social/yt.svg" alt=""></a></li>
+                    <li><a href="#"><img src="img/social/vk.svg" alt=""></a></li>
+                    <li><a href="#"><img src="img/social/tg.svg" alt=""></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
     <div class="modal fade" id="newOrderModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
@@ -198,7 +224,7 @@
                 <span>Забронировать столик</span>
                 <form action="">
                     <input type="text" placeholder="Имя">
-                    <input type="phone" placeholder="Телефон">
+                    <input type="phone" placeholder="Телефон" class="mask-phone">
                     <div class="desc">
                         <input type="number" placeholder="Гостей">
                         <input type="time" placeholder="Время">
@@ -217,6 +243,7 @@
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="js/jquery.maskedinput.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
