--- a/menu.html
+++ b/menu.html
@@ -53,19 +53,19 @@
             <div class="menuListBlock container">
                 <div class="category">
                     <ul>
-                        <li>Завтраки</li>
-                        <li>Raw</li>
-                        <li>Холодные закуски</li>
-                        <li>Брускетты</li>
-                        <li>К вину</li>
-                        <li>Салаты</li>
-                        <li>Супы</li>
-                        <li>Паста и ризотто</li>
-                        <li>Мясо</li>
-                        <li>Рыба</li>
-                        <li>Grill</li>
-                        <li>Мангал</li>
-                        <li>Гарниры</li>
+                        <li><a href="#" class="active">Завтраки</a></li>
+                        <li><a href="#">Raw</a></li>
+                        <li><a href="#">Холодные закуски</a></li>
+                        <li><a href="#">Брускетты</a></li>
+                        <li><a href="#">К вину</a></li>
+                        <li><a href="#">Салаты</a></li>
+                        <li><a href="#">Супы</a></li>
+                        <li><a href="#">Паста и ризотто</a></li>
+                        <li><a href="#">Мясо</a></li>
+                        <li><a href="#">Рыба</a></li>
+                        <li><a href="#">Grill</a></li>
+                        <li><a href="#">Мангал</a></li>
+                        <li><a href="#">Гарниры</a></li>
                     </ul>
                 </div>
                 <div class="info-block listProduct">
@@ -73,10 +73,133 @@
                         <div class="img">
                             <img src="img/57d43fb50fb93bbeca8821824246abcb.png" alt="">
                         </div>
-                        <div class="name">Яичница-глазунья из трех яиц</div>
-                        <div class="price-cart">
-                            <div class="price">250 ₽</div>
-                            <div class="inCart btn btn-accent">В корзину</div>
+                        <div class="name-price">
+                            <div class="name">Яичница-глазунья из трех яиц</div>
+                            <div class="price-cart">
+                                <div class="price">250 ₽</div>
+                                <div class="inCart btn btn-accent">В корзину</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="img">
+                            <img src="img/57d43fb50fb93bbeca8821824246abcb.png" alt="">
+                        </div>
+                        <div class="name-price">
+                            <div class="name">Яичница-глазунья из трех яиц</div>
+                            <div class="price-cart">
+                                <div class="price">250 ₽</div>
+                                <div class="inCart btn btn-accent">В корзину</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="img">
+                            <img src="img/57d43fb50fb93bbeca8821824246abcb.png" alt="">
+                        </div>
+                        <div class="name-price">
+                            <div class="name">Яичница-глазунья из трех яиц</div>
+                            <div class="price-cart">
+                                <div class="price">250 ₽</div>
+                                <div class="inCart btn btn-accent">В корзину</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="img">
+                            <img src="img/57d43fb50fb93bbeca8821824246abcb.png" alt="">
+                        </div>
+                        <div class="name-price">
+                            <div class="name">Яичница-глазунья из трех яиц</div>
+                            <div class="price-cart">
+                                <div class="price">250 ₽</div>
+                                <div class="inCart btn btn-accent">В корзину</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="img">
+                            <img src="img/57d43fb50fb93bbeca8821824246abcb.png" alt="">
+                        </div>
+                        <div class="name-price">
+                            <div class="name">Яичница-глазунья из трех яиц</div>
+                            <div class="price-cart">
+                                <div class="price">250 ₽</div>
+                                <div class="inCart btn btn-accent">В корзину</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="img">
+                            <img src="img/57d43fb50fb93bbeca8821824246abcb.png" alt="">
+                        </div>
+                        <div class="name-price">
+                            <div class="name">Яичница-глазунья из трех яиц</div>
+                            <div class="price-cart">
+                                <div class="price">250 ₽</div>
+                                <div class="inCart btn btn-accent">В корзину</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="contactSection">
+            <div class="contactBlock container">
+                <div class="title__block">Контакты</div>
+                <div class="info-block">
+                    <div class="item">
+                        <div class="blockMain">
+                            <div class="item_b">
+                                <div class="time"><span>2</span> мин</div>
+                                <div class="city">из центра Санкт-Петербурга</div>
+                            </div>
+                            <div class="item_b">
+                                <div class="time"><span>12</span> мин</div>
+                                <div class="city">из города Зеленогорск</div>
+                            </div>
+                            <div class="item_b">
+                                <div class="time"><span>42</span> мин</div>
+                                <div class="city">из аэропорта Пулково</div>
+                            </div>
+                            <div class="item_b">
+                                <div class="time"><span>52</span> мин</div>
+                                <div class="city">из города Павловск</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="info">
+                            <div class="address">
+                                <div class="addr">
+                                    <div class="icon"><i class="fa-solid fa-location-dot"></i></div>
+                                    <div class="text">Санкт-Петербург, Северная дорога, 11</div>
+                                </div>
+                                <div class="phone">
+                                    <div class="icon"><i class="fa-solid fa-phone"></i></div>
+                                    <div class="text"><a href="tel:+7 (921) 777-77-77">+7 (921) 777-77-77</a></div>
+                                </div>
+                            </div>
+                            <div class="time-work">
+                                <div class="title">Время работы</div>
+                                <div class="block_time">
+                                    <div class="item_t">
+                                        <span>Вск-Чт</span>
+                                        <span>с 12:00 до 23:00</span>
+                                    </div>
+                                    <div class="item_t">
+                                        <span>Пт-Сб</span>
+                                        <span>с 12:00 до 03:00</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="btn-block">
+                                <a href="#" class="btn btn-accent">Бронь столика</a>
+                                <a href="#" class="btn btn-borderWhite">Задать вопрос</a>
+                            </div>
+                        </div>
+                        <div class="img">
+                            <img src="img/1ec30f0cb0678a0a0318211a8374e527.png" alt="">
                         </div>
                     </div>
                 </div>
