--- a/product-item.html
+++ b/product-item.html
@@ -53,19 +53,19 @@
             <div class="menuListBlock container">
                 <div class="category">
                     <ul>
-                        <li>Завтраки</li>
-                        <li>Raw</li>
-                        <li>Холодные закуски</li>
-                        <li>Брускетты</li>
-                        <li>К вину</li>
-                        <li>Салаты</li>
-                        <li>Супы</li>
-                        <li>Паста и ризотто</li>
-                        <li>Мясо</li>
-                        <li>Рыба</li>
-                        <li>Grill</li>
-                        <li>Мангал</li>
-                        <li>Гарниры</li>
+                        <li><a href="#" class="active">Завтраки</a></li>
+                        <li><a href="#">Raw</a></li>
+                        <li><a href="#">Холодные закуски</a></li>
+                        <li><a href="#">Брускетты</a></li>
+                        <li><a href="#">К вину</a></li>
+                        <li><a href="#">Салаты</a></li>
+                        <li><a href="#">Супы</a></li>
+                        <li><a href="#">Паста и ризотто</a></li>
+                        <li><a href="#">Мясо</a></li>
+                        <li><a href="#">Рыба</a></li>
+                        <li><a href="#">Grill</a></li>
+                        <li><a href="#">Мангал</a></li>
+                        <li><a href="#">Гарниры</a></li>
                     </ul>
                 </div>
                 <div class="product">
