--- a/menu.html
+++ b/menu.html
@@ -74,7 +74,7 @@
                             <img src="img/57d43fb50fb93bbeca8821824246abcb.png" alt="">
                         </div>
                         <div class="name-price">
-                            <div class="name">Яичница-глазунья из трех яиц</div>
+                            <a href="product-item.html" class="name">Яичница-глазунья из трех яиц</a>
                             <div class="price-cart">
                                 <div class="price">250 ₽</div>
                                 <div class="inCart btn btn-accent">В корзину</div>
@@ -86,7 +86,7 @@
                             <img src="img/57d43fb50fb93bbeca8821824246abcb.png" alt="">
                         </div>
                         <div class="name-price">
-                            <div class="name">Яичница-глазунья из трех яиц</div>
+                            <a href="product-item.html" class="name">Яичница-глазунья из трех яиц</a>
                             <div class="price-cart">
                                 <div class="price">250 ₽</div>
                                 <div class="inCart btn btn-accent">В корзину</div>
@@ -98,7 +98,7 @@
                             <img src="img/57d43fb50fb93bbeca8821824246abcb.png" alt="">
                         </div>
                         <div class="name-price">
-                            <div class="name">Яичница-глазунья из трех яиц</div>
+                            <a href="product-item.html" class="name">Яичница-глазунья из трех яиц</a>
                             <div class="price-cart">
                                 <div class="price">250 ₽</div>
                                 <div class="inCart btn btn-accent">В корзину</div>
@@ -110,7 +110,7 @@
                             <img src="img/57d43fb50fb93bbeca8821824246abcb.png" alt="">
                         </div>
                         <div class="name-price">
-                            <div class="name">Яичница-глазунья из трех яиц</div>
+                            <a href="product-item.html" class="name">Яичница-глазунья из трех яиц</a>
                             <div class="price-cart">
                                 <div class="price">250 ₽</div>
                                 <div class="inCart btn btn-accent">В корзину</div>
@@ -122,7 +122,7 @@
                             <img src="img/57d43fb50fb93bbeca8821824246abcb.png" alt="">
                         </div>
                         <div class="name-price">
-                            <div class="name">Яичница-глазунья из трех яиц</div>
+                            <a href="product-item.html" class="name">Яичница-глазунья из трех яиц</a>
                             <div class="price-cart">
                                 <div class="price">250 ₽</div>
                                 <div class="inCart btn btn-accent">В корзину</div>
@@ -134,7 +134,7 @@
                             <img src="img/57d43fb50fb93bbeca8821824246abcb.png" alt="">
                         </div>
                         <div class="name-price">
-                            <div class="name">Яичница-глазунья из трех яиц</div>
+                            <a href="product-item.html" class="name">Яичница-глазунья из трех яиц</a>
                             <div class="price-cart">
                                 <div class="price">250 ₽</div>
                                 <div class="inCart btn btn-accent">В корзину</div>
@@ -221,6 +221,54 @@
         </div>
     </footer>
     
+    <div class="menu-open">
+        <div class="info-block">
+            <div class="item logo-close">
+                <div class="logo">
+                    <img src="img/logo.svg" alt="">
+                </div>
+                <div class="btn-close"><i class="fa-solid fa-xmark"></i></div>
+            </div>
+            <div class="item list">
+                <ul>
+                    <li><a href="menu.html">Меню</a></li>
+                    <li><a href="#">Доставка</a></li>
+                    <li><a href="#">Оплата</a></li>
+                    <li><a href="#" class="btn btn-accent" data-bs-toggle="modal" data-bs-target="#newOrderModal">Бронь столика</a></li>
+                </ul>
+            </div>
+            <div class="item social">
+                <ul>
+                    <li><a href="#"><img src="img/social/yt.svg" alt=""></a></li>
+                    <li><a href="#"><img src="img/social/vk.svg" alt=""></a></li>
+                    <li><a href="#"><img src="img/social/tg.svg" alt=""></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="newOrderModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-body">
+                <div class="logo">
+                    <img src="img/logo.svg" alt="">
+                </div>
+                <span>Забронировать столик</span>
+                <form action="">
+                    <input type="text" placeholder="Имя">
+                    <input type="phone" placeholder="Телефон" class="mask-phone">
+                    <div class="desc">
+                        <input type="number" placeholder="Гостей">
+                        <input type="time" placeholder="Время">
+                    </div>
+                    <button type="submit" class="btn btn-accent">Забронировать</button>
+                </form>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"><i class="fa-solid fa-xmark"></i></button>
+            </div>
+          </div>
+        </div>
+    </div>
 
 
     <!-- Scripts -->
